@@ -50,6 +50,10 @@ Bugfixes:
 
  * Issue #95: anonymous is now treated as any other case-sensitive user.
 
+API changes since 0.5.0:
+
+ * FTPHandler gained a new "_extra_feats" private attribute.
+
 
 Version: 0.5.0 - Date: 2008-09-20
 ---------------------------------
